--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <div class="socials">
                                     <a href="https://instagram.com/dyklua" target="_blank"><img
                                             src="assets/img/icons/ig.svg"></a>
-                                    <a href="https://www.tiktok.com/@luasplace" target="_blank"><img
+                                    <a href="https://www.tiktok.com/@onlyonelua" target="_blank"><img
                                             src="assets/img/icons/tt.svg"></a>
                                 </div>
                             </div>
@@ -129,7 +129,7 @@
                                 <a href="https://t.me/blucifer133" target="_blank"><span
                                         class="sparkle">Blue</span></a>
                                 <img
-                                    src="assets/img/pfp/blue.jpg">
+                                    src="assets/img/pfp/Blue.jpg">
                                 <a id="button"><img class="badge"
                                         src="assets/img/pfp/male.webp"
                                         title="Member"></a>
@@ -170,7 +170,7 @@
                                 <a href="https://t.me/IEatToes2023" target="_blank"><span
                                         class="sparkle">Toes</span></a>
                                 <img
-                                    src="assets/img/pfp/toes.jpg">
+                                    src="assets/img/pfp/Toes.jpg">
                                 <a id="button"><img class="badge"
                                         src="assets/img/pfp/male.webp"
                                         title="Male"></a>
