--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     src="assets/img/pfp/iraq.jpg">
                                 <a id="button"><img class="badge"
                                         src="assets/img/pfp/male.webp"
-                                        title="Male"></a>
+                                        title="Member"></a>
                                 <div class="socials">
                                     <a href="https://instagram.com/i6raqi" target="_blank"><img
                                             src="assets/img/icons/ig.svg"></a>
@@ -173,7 +173,7 @@
                                     src="assets/img/pfp/Toes.jpg">
                                 <a id="button"><img class="badge"
                                         src="assets/img/pfp/male.webp"
-                                        title="Male"></a>
+                                        title="Member"></a>
                                 <div class="socials">
                                     <a href="https://t.me/IEatToes2023" target="_blank"><img
                                             src="assets/img/icons/tg.svg"></a>
