--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <img
                                     src="assets/img/pfp/Blue.jpg">
                                 <a id="button"><img class="badge"
-                                        src="assets/img/pfp/male.webp"
+                                        src="assets/img/pfp/Male.webp"
                                         title="Member"></a>
                                 <div class="socials">
                                     <a href="https://t.me/blucifer133" target="_blank"><img
@@ -151,7 +151,7 @@
                                 <img
                                     src="assets/img/pfp/iraq.jpg">
                                 <a id="button"><img class="badge"
-                                        src="assets/img/pfp/male.webp"
+                                        src="assets/img/pfp/Male.webp"
                                         title="Member"></a>
                                 <div class="socials">
                                     <a href="https://instagram.com/i6raqi" target="_blank"><img
@@ -172,7 +172,7 @@
                                 <img
                                     src="assets/img/pfp/Toes.jpg">
                                 <a id="button"><img class="badge"
-                                        src="assets/img/pfp/male.webp"
+                                        src="assets/img/pfp/Male.webp"
                                         title="Member"></a>
                                 <div class="socials">
                                     <a href="https://t.me/IEatToes2023" target="_blank"><img
