--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="item">
                         <div class="content">
                             <div class="img-wrap">
-                                <a href="https://www.instagram.com/aysyloo/" target="_blank"><span
+                                <a href="https://www.instagram.com/sentlua/" target="_blank"><span
                                         class="sparkle">Lua</span></a>
                                 <img
                                     src="assets/img/pfp/lua.jpg">
@@ -106,7 +106,7 @@
                                         src="assets/img/pfp/Co owner.gif"
                                         title="#01 Co Owner"></a>
                                 <div class="socials">
-                                    <a href="https://www.instagram.com/aysyloo/" target="_blank"><img
+                                    <a href="https://www.instagram.com/sentlua/" target="_blank"><img
                                             src="assets/img/icons/ig.svg"></a>
                                     <a href="https://www.tiktok.com/@onlyonelua" target="_blank"><img
                                             src="assets/img/icons/tt.svg"></a>
