--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="item">
                         <div class="content">
                             <div class="img-wrap">
-                                <a href="https://www.instagram.com/mrairigh" target="_blank"><span
+                                <a href="https://t.me/b58smokey" target="_blank"><span
                                         class="sparkle">Smokey</span></a>
                                 <img
                                     src="assets/img/pfp/smokey.jpg">
@@ -156,10 +156,8 @@
                                         src="assets/img/pfp/Male.webp"
                                         title="Member"></a>
                                 <div class="socials">
-                                    <a href="https://www.instagram.com/mrairigh" target="_blank"><img
-                                            src="assets/img/icons/ig.svg"></a>
-                                            <a href="https://t.me/b58smokey" target="_blank"><img
-                                                src="assets/img/icons/tg.svg"></a>
+                                     <a href="https://t.me/b58smokey" target="_blank"><img
+                                             src="assets/img/icons/tg.svg"></a>
                                 </div>
                             </div>
                         </div>
