--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div class="content">
                             <div class="img-wrap">
                                 <a href="https://t.me/b58smokey" target="_blank"><span
-                                        class="sparkle">Smokey</span></a>
+                                        class="sparkle">Smokey The fucking skid</span></a>
                                 <img
                                     src="assets/img/pfp/smokey.jpg">
                                 <a id="button"><img class="badge"
